# INFO-3604-PROJECT

./: .dockerignore  .gitignore  DEPLOY_RENDER.md  Dockerfile  Dockerfile.api  README.md  docker-compose.yml  pnpm-lock.yaml  pyproject.toml  render.yaml  requirements.txt
App/: main.py
App/controllers/: __init__.py  admin.py  event.py  initialize.py  reviewer.py  usher.py  workflow_common.py
App/models/: __init__.py  author.py  award.py  digest.py  editor.py  presentation.py  qr_code.py  report.py  review.py  review_assignment.py  review_submission.py  session.py  submission.py  submission_author.py  submission_version.py  supplementary_material.py  track.py  track_submisson.py  user.py
App/static/: main.js  style.css
App/templates/: index.html  layout.html
App/templates/admin/: admin_agenda_builder.html  admin_judging_results.html  admin_reports_analytics.html  admin_review_management.html  admin_settings.html  admin_submissions.html
App/templates/attendee/: attendee_event_digest.html  attendee_my_qr_code.html  attendee_my_schedule.html  attendee_presentations.html  attendee_qa_feedback.html  attendee_schedule_agenda.html
App/templates/author/: author_create_submission.html  author_my_submissions.html  author_reviewer_feedback.html  author_status_tracking.html
App/templates/editior/: editor_view_submissions.html
App/templates/editor/: editor_abstract_digest.html  (+1 more)
App/tests/: test_workflow.py
App/views/: admin_workflow.py  auth.py  index.py  reviewer_workflow.py  roles.py  usher_workflow.py
artifacts/uwi-festival/: index.html  package.json
(+63 files in other folders)
